Refresh bson4k (#33)
v0.5.0 - Kotlin 1.9 and upgraded tooling